--- a/package.json
+++ b/package.json
@@ -11,7 +11,17 @@
   "dependencies": {
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.446.0",
+    "firebase": "^10.13.2",
+    "canvas-confetti": "^1.9.3",
+    "date-fns": "^3.6.0",
+    "axios": "^1.7.7",
+    "resend": "^4.0.0",
+    "@google/generative-ai": "^0.19.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
